Sometime Keyframes cannot be selected in Grease Pencil Dopesheet #57656

Closed
opened 2018-11-06 18:48:22 +01:00 by Antonio Vazquez · 9 comments

Windows 10 - Last source compiled

Since several days (not sure when) sometimes it's impossible to select the keyframes of grease pencil in the dopesheet.

Doing click over one key soemetimes works, sometimes doesn't. Select with Box selection always works.

@venomgfx I think you had this problem too, no?

To reproduce:

  1. Add a GP Object
  2. Draw in several frames
  3. Open Dopesheet ->GP mode
  4. Try to select randomly

You can try with this simple file: SELECT_BUG.blend

Windows 10 - Last source compiled Since several days (not sure when) sometimes it's impossible to select the keyframes of grease pencil in the dopesheet. Doing click over one key soemetimes works, sometimes doesn't. Select with Box selection always works. @venomgfx I think you had this problem too, no? To reproduce: 1) Add a GP Object 2) Draw in several frames 3) Open Dopesheet ->GP mode 4) Try to select randomly You can try with this simple file: [SELECT_BUG.blend](https://archive.blender.org/developer/F5411194/SELECT_BUG.blend)
Author
Member

Added subscribers: @pablovazquez, @antoniov

Added subscribers: @pablovazquez, @antoniov

Added subscriber: @pepe-school-land

Added subscriber: @pepe-school-land

yes, in the lasts versions basicaly you can´t select the GP keyframes in dopesheet, "sometimes" can but not offen.

Daniel

yes, in the lasts versions basicaly you can´t select the GP keyframes in dopesheet, "sometimes" can but not offen. Daniel
Author
Member

Added subscriber: @angavrilov

Added subscriber: @angavrilov
Author
Member

I have bisect error and this was introduced in commit: https://developer.blender.org/rBf250f9256e0654b889971aad50922972fa8ca728

@angavrilov Could you take a look?

I have bisect error and this was introduced in commit: https://developer.blender.org/rBf250f9256e0654b889971aad50922972fa8ca728 @angavrilov Could you take a look?
Alexander Gavrilov was assigned by Antonio Vazquez 2018-11-06 20:20:44 +01:00

This issue was referenced by 5c18393c8e

This issue was referenced by 5c18393c8ee9d72e1fe5e8fc6edac569d0a4f13a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Thanks @angavrilov !

Thanks @angavrilov !

Thanksl you very much!

Thanksl you very much!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57656
No description provided.